# ric_lib

./: Cargo.toml  README.md  benchmark.py  main.py  pyproject.toml  ric_lib.pyi
.github/workflows/: CI.yml
src/: lib.rs
tests/: test_ric_lib.py
