[package]
name = "ric_lib"
version = "0.1.0"
edition = "2021"
description = "A fast, size-capped in-memory LRU cache exposed to Python via PyO3"
authors = ["Chandan Bauri"]
license = "MIT"
repository = "https://github.com/chandanbauri/ric_lib"
keywords = ["cache", "lru", "python", "pyo3"]
categories = ["caching", "api-bindings"]

[lib]
name = "ric_lib"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.45"
pyo3 = "0.29.0"
pythonize = "0.29.0"
serde_json = "1"
